Fixed search card attributes display to the left on mobile

--- a/root/styles/explore.css
+++ b/root/styles/explore.css
@@ -222,10 +222,11 @@ textarea:hover {
 
   .attribute-container {
     flex-direction: column;
+    justify-content: center;
   }
 
   .attribute {
-    margin-top: 5%;
+    margin: 0 auto;
   }
 
   #load-more {
